captions locations for all figures

--- a/templates/app.html
+++ b/templates/app.html
@@ -166,11 +166,12 @@
     <!-- Session overview plot -->
     <div class="twelve columns">
         <figure>
-            <img id="sessionPlot">
+             <div class="imgWrapper"><img id="sessionPlot"></div>
             <img id="sessionPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
                 class="loading">
             <details>
-                <summary>Figure 1: click to read the legend</summary>
+                <summary id="sessionPlotLegend">Legend placeholder.</summary>
+                <!-- summary>Figure 1: click to read the legend</summary>
 
                 <p>From top to bottom, left to right :</p>
                 <p><strong>Top:</strong></p>
@@ -205,7 +206,7 @@
 
                     <li><a href="https://int-brain-lab.github.io/iblenv/notebooks_external/loading_ephys_data.html">Example
                             to load LFP data and compute the power spectrum</a></li>
-                </ul>
+                </ul -->
             </details>
         </figure>
     </div>
@@ -226,11 +227,12 @@
     <!-- Session overview plot -->
     <div class="twelve columns">
         <figure>
-            <img id="behaviourPlot">
+             <div class="imgWrapper"><img id="behaviourPlot"></div>
             <img id="behaviourPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
                 class="loading">
             <details>
-                <summary>Figure 2: click to read the legend</summary>
+                <summary id="behaviourPlotLegend">Legend placeholder.</summary>
+                <!--summary>Figure 2: click to read the legend</summary>
                 <p>From top to bottom, left to right:</p>
                 <p><strong>Top:</strong></p>
                 <ul>
@@ -273,7 +275,7 @@
                         condition are displayed at the top with the same color scheme. Trial numbers within a condition
                         are kept ascending from bottom to top. Lick events have been computed using DLC points detected
                         on both the left and right cameras</li>
-                </ul>
+                </ul-->
             </details>
         </figure>
     </div>
@@ -331,12 +333,13 @@
 <div class="row">
     <div class="twelve columns">
         <figure id="trialWrapper">
-            <img id="trialPlot">
+             <div class="imgWrapper"><img id="trialPlot"></div>
             <img id="trialPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
                 class="loading">
             <div id="trialTime"></div>
             <details>
-                <summary>Figure 3: click to read the legend</summary>
+                <summary id="trialPlotLegend">Legend placeholder.</summary>
+                <!--<summary>Figure 3: click to read the legend</summary>
 
                 <p>From left to right:</p>
                 <ul>
@@ -345,7 +348,7 @@
                     <li>Zoomed-in view of the raster around the time of the selected trial ; the lines indicate events
                         in the trial (go cue in blue, first movement in green, and feedback in red).</li>
                     <li>Brain region acronyms along the probe depth (um)</li>
-                </ul>
+                </ul>-->
 
             </details>
         </figure>
@@ -364,14 +367,15 @@
 <div class="row">
     <div class="twelve columns">
         <figure>
-            <img id="trialEventPlot">
+            <div class="imgWrapper"><img id="trialEventPlot"></div>
             <img id="trialEventPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
                 class="loading">
             <details>
-                <summary>Figure 4: click to read the legend</summary>
-                <p>Average of the firing rate (z-scored) for good units along the probe depths (um), locked to a
+                <summary id="trialEventPlotLegend">Legend placeholder.</summary>
+                <!--<summary>Figure 4: click to read the legend</summary>-->
+                <!--<p>Average of the firing rate (z-scored) for good units along the probe depths (um), locked to a
                     particular event: visual stimulus onset (left plot), first movement (middle plot), feedback (right
-                    plot).</p>
+                    plot).</p>-->
             </details>
         </figure>
     </div>
