Better legend placeholder

--- a/templates/app.html
+++ b/templates/app.html
@@ -176,7 +176,8 @@
             <img id="sessionPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
                 class="loading">
             <details>
-                <summary id="sessionPlotLegend">Legend placeholder.</summary>
+                <summary id="sessionPlotLegend">Please hover your mouse over a subplot panel of interest above to obtain
+                    its figure legend here.</summary>
                 <!-- summary>Figure 1: click to read the legend</summary>
 
                 <p>From top to bottom, left to right :</p>
@@ -237,7 +238,8 @@
             <img id="behaviourPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
                 class="loading">
             <details>
-                <summary id="behaviourPlotLegend">Legend placeholder.</summary>
+                <summary id="behaviourPlotLegend">Please hover your mouse over a subplot panel of interest above to
+                    obtain its figure legend here.</summary>
                 <!--summary>Figure 2: click to read the legend</summary>
                 <p>From top to bottom, left to right:</p>
                 <p><strong>Top:</strong></p>
@@ -344,7 +346,8 @@
                 class="loading">
             <div id="trialTime"></div>
             <details>
-                <summary id="trialPlotLegend">Legend placeholder.</summary>
+                <summary id="trialPlotLegend">Please hover your mouse over a subplot panel of interest above to obtain
+                    its figure legend here.</summary>
                 <!--<summary>Figure 3: click to read the legend</summary>
 
                 <p>From left to right:</p>
@@ -377,7 +380,8 @@
             <img id="trialEventPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
                 class="loading">
             <details>
-                <summary id="trialEventPlotLegend">Legend placeholder.</summary>
+                <summary id="trialEventPlotLegend">Please hover your mouse over a subplot panel of interest above to
+                    obtain its figure legend here.</summary>
                 <!--<summary>Figure 4: click to read the legend</summary>-->
                 <!--<p>Average of the firing rate (z-scored) for good units along the probe depths (um), locked to a
                     particular event: visual stimulus onset (left plot), first movement (middle plot), feedback (right
@@ -442,7 +446,8 @@
             <img id="clusterPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
                 class="loading">
             <details>
-                <summary id="clusterPlotLegend">Legend placeholder.</summary>
+                <summary id="clusterPlotLegend">Please hover your mouse over a subplot panel of interest above to obtain
+                    its figure legend here.</summary>
 
                 <!-- <summary>Figure 5: click to read the legend</summary> -->
                 <!-- <p>From top to bottom, left to right :</p>
