Display 'show advanced metrics' instead of QC in the top bar

--- a/templates/app.html
+++ b/templates/app.html
@@ -57,7 +57,7 @@
 {% block share %}
 
 <div id="qc-switch">
-    <span>QC</span>
+    <span>show advanced metrics</span>
     <input type="checkbox" id="qc-checkbox" />
     <label for="qc-checkbox"></label>
 </div>
@@ -173,8 +173,7 @@
     <div class="twelve columns">
         <figure>
             <div class="imgWrapper"><img id="sessionPlot"></div>
-            <img id="sessionPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
-                class="loading">
+            <img id="sessionPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif" class="loading">
             <details>
                 <summary id="sessionPlotLegend">Please hover your mouse over a subplot panel of interest above to obtain
                     its figure legend here.</summary>
@@ -235,8 +234,7 @@
     <div class="twelve columns">
         <figure>
             <div class="imgWrapper"><img id="behaviourPlot"></div>
-            <img id="behaviourPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
-                class="loading">
+            <img id="behaviourPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif" class="loading">
             <details>
                 <summary id="behaviourPlotLegend">Please hover your mouse over a subplot panel of interest above to
                     obtain its figure legend here.</summary>
@@ -342,8 +340,7 @@
     <div class="twelve columns">
         <figure id="trialWrapper">
             <div class="imgWrapper"><img id="trialPlot"></div>
-            <img id="trialPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
-                class="loading">
+            <img id="trialPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif" class="loading">
             <div id="trialTime"></div>
             <details>
                 <summary id="trialPlotLegend">Please hover your mouse over a subplot panel of interest above to obtain
@@ -377,8 +374,7 @@
     <div class="twelve columns">
         <figure>
             <div class="imgWrapper"><img id="trialEventPlot"></div>
-            <img id="trialEventPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
-                class="loading">
+            <img id="trialEventPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif" class="loading">
             <details>
                 <summary id="trialEventPlotLegend">Please hover your mouse over a subplot panel of interest above to
                     obtain its figure legend here.</summary>
@@ -443,8 +439,7 @@
     <div class="twelve columns">
         <figure>
             <div class="imgWrapper"><img id="clusterPlot"></div>
-            <img id="clusterPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif"
-                class="loading">
+            <img id="clusterPlotLoading" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif" class="loading">
             <details>
                 <summary id="clusterPlotLegend">Please hover your mouse over a subplot panel of interest above to obtain
                     its figure legend here.</summary>
