--- a/templates/app.html
+++ b/templates/app.html
@@ -3,6 +3,8 @@
 
 {% block header %}
 
+<script src=" https://cdn.jsdelivr.net/npm/lz-string@1.5.0/libs/lz-string.min.js"></script>
+
 <!-- Generated script with all data -->
 <script src="{{ url_for('static', filename='data.js') }}"></script>
 
