--- a/templates/app.html
+++ b/templates/app.html
@@ -5,6 +5,9 @@
 
 <script src=" https://cdn.jsdelivr.net/npm/lz-string@1.5.0/libs/lz-string.min.js"></script>
 
+<!-- Script with all Allen regions -->
+<script src="{{ url_for('static', filename='regions.js') }}"></script>
+
 <!-- Generated script with all data -->
 <script src="{{ url_for('static', filename='data.js') }}"></script>
 
@@ -33,15 +36,7 @@
 
 
 {% block share %}
-
-<div id="qc-switch">
-    <span>show advanced metrics</span>
-    <input type="checkbox" id="qc-checkbox" />
-    <label for="qc-checkbox"></label>
-</div>
-
 <div id="share"><a>share</a></div>
-
 {% endblock %}
 
 
@@ -155,54 +150,10 @@
             <details>
                 <summary id="sessionPlotLegend">Please hover your mouse over a subplot panel of interest above to obtain
                     its figure legend here.</summary>
-                <!-- summary>Figure 1: click to read the legend</summary>
-
-                <p>From top to bottom, left to right :</p>
-                <p><strong>Top:</strong></p>
-                <ul>
-                    <li>Amplitude (uV) of units along the probe depth (um), colored by the quality: good units in green,
-                        multi-units (mua) in red</li>
-                    <li>Amplitude (uV) of units along the probe depth (um), colored by their firing rate (Hz)</li>
-                    <li>Raster plot of the spikes of good units along the probe depth (um), throughout the whole
-                        experiment time (s)</li>
-                    <li>Root mean square (RMS) values of the action potential (AP) band along the probe depth (um)</li>
-                    <li>Power (dB) in the delta band (0-4Hz) of the low-frequency (LFP) band</li>
-                    <li>Brain region acronyms along the probe depth (um)</li>
-                </ul>
-
-                <p><strong>Bottom:</strong></p>
-                <ul>
-                    <li>3 raw electrophysiology data snippets of 50 millisecond (ms) duration are shown (one at T=600s,
-                        1800s, and 3000s). The raw data recorded on each channel is plotted as a gray code, and ordered
-                        along the probe depth. Divergence from the gray color (black or white) indicates a shift from
-                        baseline activity. Overlaid dots indicate when spikes were detected (green: good units, red:
-                        multi-units)</li>
-                    <li>Brain region acronyms along the probe depth (um)</li>
-                </ul>
-
-                <p><strong>Code:</strong></p>
-                <ul>
-                    <li><a href="https://int-brain-lab.github.io/iblenv/notebooks_external/loading_trials_data.html">Example
-                            to load trials data and plot a psychometric curve</a></li>
-                    <li><a
-                            href="https://int-brain-lab.github.io/iblenv/notebooks_external/loading_spikesorting_data.html">Example
-                            to load spike sorting data and plot a raster</a></li>
-
-                    <li><a href="https://int-brain-lab.github.io/iblenv/notebooks_external/loading_ephys_data.html">Example
-                            to load LFP data and compute the power spectrum</a></li>
-                </ul -->
             </details>
         </figure>
     </div>
 </div>
-
-<!-- POST-PLOT TEXT -->
-<!-- <div class="row">
-    <div class="twelve columns">
-        <p>Get insights on the behavior performance thanks to psychometric curves, chronometric functions or reaction
-            time distribution across the recording session.</p>
-    </div>
-</div> -->
 
 
 <!--                                          FIGURE 2                                          -->
@@ -216,50 +167,6 @@
             <details>
                 <summary id="behaviourPlotLegend">Please hover your mouse over a subplot panel of interest above to
                     obtain its figure legend here.</summary>
-                <!--summary>Figure 2: click to read the legend</summary>
-                <p>From top to bottom, left to right:</p>
-                <p><strong>Top:</strong></p>
-                <ul>
-                    <li>Psychometric curves computed in different types of trial block ; for a trial block type, the
-                        probability of the visual stimulus being on the left is either 0.5 (black), 0.2 (orange), or 0.8
-                        (blue)</li>
-                    <li>Reaction time (s) curves computed in different trial blocks (same color scheme as the
-                        psychometric curve plots)</li>
-                    <li>Reaction time (s) for each trial, plotted throughout the whole experiment</li>
-                </ul>
-
-                <p><strong>Bottom:</strong></p>
-                <ul>
-                    <li>Raster plot of the left paw speed, sorted by trial outcome (correct in blue, incorrect in red)
-                        and aligned to the visual stimulus onset; averages (mean and STD) for each condition
-                        are displayed at the top with the same color scheme. Trial numbers within a condition are kept
-                        ascending from bottom to top. Left paw speed has been computed from DLC points detected on the
-                        left camera</li>
-                    <li>Raster plot of the nose tip speed, sorted by trial outcome (correct in blue, incorrect in red)
-                        and aligned to the visual stimulus onset; averages (mean and STD) for each condition
-                        are displayed at the top with the same color scheme. Trial numbers within a condition are kept
-                        ascending from bottom to top. Nose tip speed has been computed from DLC points detected on the
-                        left camera</li>
-                    <li>Raster plot of the whisker pad motion energy, sorted by trial outcome (correct in blue,
-                        incorrect in red) and aligned to the visual stimulus onset; averages (mean and STD) for each
-                        condition are displayed at the top with the same color scheme. Trial numbers within a condition
-                        are kept ascending from bottom to top. Motion energy has been computed using the left
-                        camera </li>
-                    <li>Raster plot of pupil diameter, sorted by trial outcome (correct in blue,
-                        incorrect in red) and aligned to the visual stimulus onset; averages (mean and STD) for each
-                        condition are displayed at the top with the same color scheme. Trial numbers within a condition
-                        are kept ascending from bottom to top. The pupil diameter has been computed from DLC points on
-                        the left camera </li>
-                    <li>Raster plot of wheel velocity, sorted by visual stimulus side (right in
-                        yellow, left in green) and aligned to the movement onset ; averages (mean and STD) for each
-                        condition are displayed at the top with the same color scheme. Trial numbers within a condition
-                        are kept ascending from bottom to top </li>
-                    <li>Raster plot of lick events, sorted by visual stimulus side (right in
-                        yellow, left in green) and aligned to feedback time ; averages (mean and STD) for each
-                        condition are displayed at the top with the same color scheme. Trial numbers within a condition
-                        are kept ascending from bottom to top. Lick events have been computed using DLC points detected
-                        on both the left and right cameras</li>
-                </ul-->
             </details>
         </figure>
     </div>
@@ -323,26 +230,9 @@
             <details>
                 <summary id="trialPlotLegend">Please hover your mouse over a subplot panel of interest above to obtain
                     its figure legend here.</summary>
-                <!--<summary>Figure 3: click to read the legend</summary>
-
-                <p>From left to right:</p>
-                <ul>
-                    <li>Raster plot of the spikes of all good units along the probe depth (um), throughout the whole
-                        experiment time (s) ; the dash line indicates the trial selected for visualization</li>
-                    <li>Zoomed-in view of the raster around the time of the selected trial ; the lines indicate events
-                        in the trial (go cue in blue, first movement in green, and feedback in red).</li>
-                    <li>Brain region acronyms along the probe depth (um)</li>
-                </ul>-->
 
             </details>
         </figure>
-    </div>
-</div>
-
-<!-- Placeholder for unity -->
-<div class="row">
-    <div class="twelve columns">
-        <canvas id="unity-canvas-trial"></canvas>
     </div>
 </div>
 
@@ -356,10 +246,6 @@
             <details>
                 <summary id="trialEventPlotLegend">Please hover your mouse over a subplot panel of interest above to
                     obtain its figure legend here.</summary>
-                <!--<summary>Figure 4: click to read the legend</summary>-->
-                <!--<p>Average of the firing rate (z-scored) for good units along the probe depths (um), locked to a
-                    particular event: visual stimulus onset (left plot), first movement (middle plot), feedback (right
-                    plot).</p>-->
             </details>
         </figure>
     </div>
@@ -421,41 +307,6 @@
             <details>
                 <summary id="clusterPlotLegend">Please hover your mouse over a subplot panel of interest above to obtain
                     its figure legend here.</summary>
-
-                <!-- <summary>Figure 5: click to read the legend</summary> -->
-                <!-- <p>From top to bottom, left to right :</p>
-                <p><strong>Top:</strong></p>
-                <ul>
-                    <li>Amplitude (uV) of good units along the probe depth (um), colored by the brain region color ; the
-                        selected unit for visualization is highlighted in black</li>
-                    <li>Raster plot of the spikes of the selected good unit, with the trial block type shown (the
-                        probability of the visual stimulus being on the left is either 0.5 (black), 0.2 (orange), or 0.8
-                        (blue) and aligned to the visual stimulus onset ; averages (mean and STD) for each condition
-                        are displayed at the top with the same color scheme. Trial numbers are ascending from bottom to
-                        top, and kept in a similar order as during the experiment.</li>
-                    <li>Raster plot of the spikes of the selected good unit, sorted by visual stimulus contrasts (0,
-                        6.25, 12.5, 25, 100%, from pale to dark gray) and aligned to the visual stimulus onset ;
-                        averages (mean and STD) for each condition are displayed at the top with the same color scheme.
-                        Trial numbers within a condition are kept ascending from bottom to top.</li>
-                    <li>Raster plot of the spikes of the selected good unit, sorted by visual stimulus side (right in
-                        yellow, left in green) and aligned to the movement onset ; averages (mean and STD) for each
-                        condition are displayed at the top with the same color scheme. Trial numbers within a condition
-                        are kept ascending from bottom to top.</li>
-                    <li>Raster plot of the spikes of the selected good unit, sorted by trial outcome (correct in blue,
-                        incorrect in red) and aligned to feedback time ; averages (mean and STD) for each condition
-                        are displayed at the top with the same color scheme. Trial numbers within a condition are kept
-                        ascending from bottom to top.</li>
-                    <li>Template waveforms of the selected good unit, presented for the electrode channels where spikes
-                        were detected. Scale bar indicates amplitude of waveforms in uV and as a ratio to the standard
-                        deviation of the noise on the peak channel. The location of electrode channels within the whole
-                        probe is presented on the right.</li>
-                </ul>
-                <p><strong>Bottom:</strong></p>
-                <ul>
-                    <li>Autocorrelogram of the selected good unit.</li>
-                    <li>Inter-spike-interval (ISI) distribution for the selected good unit.</li>
-                    <li>Amplitude (uV) of the spikes of the selected good unit across the experiment time (s).</li>
-                </ul> -->
             </details>
         </figure>
     </div>
