--- a/templates/app.html
+++ b/templates/app.html
@@ -18,7 +18,7 @@
 <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 
 <!-- Unity loader -->
-<script src="static/Build/IBLMini-webgl.loader.js"></script>
+<!-- <script src="static/Build/IBLMini-webgl.loader.js"></script> -->
 
 <!-- autoComplete -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
@@ -94,12 +94,12 @@
 <!-- ROW WITH UNITY AND SESSION DETAILS -->
 <div class="row">
     <!-- UNITY -->
-    <div class="eight columns">
-        <canvas id="unity-canvas"></canvas>
-    </div>
+    <!-- <div class="eight columns"> -->
+    <!-- <canvas id="unity-canvas"></canvas> -->
+    <!-- </div> -->
 
     <!-- SESSION DETAILS -->
-    <div class="four columns">
+    <div class="twelve columns">
         <div id="sessionDetails"></div>
     </div>
 </div>
