--- a/templates/app.html
+++ b/templates/app.html
@@ -110,6 +110,23 @@
 </div>
 
 
+<div class="row">
+    <!-- PRE-PROCESSING SELECTOR -->
+    <div class="six columns">
+        <!-- Select -->
+        <select size="1" id="preProcessingSelector" class="u-full-width multiple">
+        </select>
+    </div>
+
+    <!-- ROI SELECTOR -->
+    <div class="six columns">
+        <!-- Select -->
+        <select size="1" id="roiSelector" class="u-full-width multiple">
+        </select>
+    </div>
+</div>
+
+
 
 
 
